change speed animation

--- a/index.html
+++ b/index.html
@@ -14,37 +14,37 @@
     <div class="swiper-wrapper">
 
       <div class="swiper-slide" style="background-color: #BF0000;">
-        <div class="slide__content" data-swiper-parallax="-500">
+        <div class="slide__content" data-swiper-parallax="-700" data-swiper-parallax-duration="2000">
           <h3 class="slide__title">Lorem ipsum</h3>
           <p class="slide__text">Tempora perspiciatis neque!</p>
           <p class="slide__text">Recusandae repellat mollitia atque rem, error ipsum </p>
           <p class="slide__text-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, incidunt!</p>
         </div>
-        <div class="slide__picture" data-swiper-parallax="-500">
+        <div class="slide__picture" data-swiper-parallax="-700" data-swiper-parallax-duration="2000">
           <img class="slide__img" src="http://www.oschadbank.ua/upload/iblock/5da/Kartka_obriz(1).png" alt="">
         </div>
       </div>
 
       <div class="swiper-slide" style="background-color: #E41B13;">
-        <div class="slide__content" data-swiper-parallax="-500">
+        <div class="slide__content" data-swiper-parallax="-700" data-swiper-parallax-duration="2000">
           <h3 class="slide__title">Dolor sit amet</h3>
           <p class="slide__text">Vero odit sapiente quam beatae voluptatum consectetur</p>
           <p class="slide__text">ducimus quae magni numquam quos atque mollitia!</p>
           <p class="slide__text-small">Incidunt corporis, tempore illo architecto</p>
         </div>
-        <div class="slide__picture" data-swiper-parallax="-500">
+        <div class="slide__picture" data-swiper-parallax="-700" data-swiper-parallax-duration="2000">
           <img class="slide__img" src="http://www.oschadbank.ua/upload/iblock/a1d/without%20back(RGB)470_1.png" alt="">
         </div>
       </div>
 
       <div class="swiper-slide" style="background-color: #009F7D;">
-        <div class="slide__content" data-swiper-parallax="-500">
+        <div class="slide__content" data-swiper-parallax="-700" data-swiper-parallax-duration="2000">
           <h3 class="slide__title">Molestiae, dolor!</h3>
           <p class="slide__text">Facilis porro possimus quod perferendis consectetur, natus accusamus</p>
           <p class="slide__text">Rem libero omnis ad porro saepe</p>
           <p class="slide__text-small">Placeat beatae excepturi modi fugit praesentium culpa pariatur ex</p>
         </div>
-        <div class="slide__picture" data-swiper-parallax="-500">
+        <div class="slide__picture" data-swiper-parallax="-700" data-swiper-parallax-duration="2000">
           <img class="slide__img" src="http://www.oschadbank.ua/upload/iblock/5da/Kartka_obriz(1).png" alt="">
         </div>
       </div>
