--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p class="slide__text-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, incidunt!</p>
         </div>
         <div class="slide__picture" data-swiper-parallax="-200" data-swiper-parallax-duration="1400">
-          <img class="slide__img" src="http://www.oschadbank.ua/upload/iblock/5da/Kartka_obriz(1).png" alt="">
+          <img class="slide__img" src="img-1.png" alt="">
         </div>
       </div>
 
@@ -33,7 +33,7 @@
           <p class="slide__text-small">Incidunt corporis, tempore illo architecto</p>
         </div>
         <div class="slide__picture" data-swiper-parallax="-200" data-swiper-parallax-duration="1400">
-          <img class="slide__img" src="http://www.oschadbank.ua/upload/iblock/a1d/without%20back(RGB)470_1.png" alt="">
+          <img class="slide__img" src="img-2.png" alt="">
         </div>
       </div>
 
@@ -45,7 +45,7 @@
           <p class="slide__text-small">Placeat beatae excepturi modi fugit praesentium culpa pariatur ex</p>
         </div>
         <div class="slide__picture" data-swiper-parallax="-200" data-swiper-parallax-duration="1400">
-          <img class="slide__img" src="http://www.oschadbank.ua/upload/iblock/5da/Kartka_obriz(1).png" alt="">
+          <img class="slide__img" src="img-1.png" alt="">
         </div>
       </div>
 
