--- a/slider.html
+++ b/slider.html
@@ -8,7 +8,7 @@
                                    <div class="slide-container">
 
                                           <div class="slide-content" data-swiper-parallax="-500" data-swiper-parallax-duration="1400">
-                                              <h2 class="slide-title FuturaPT-Demi">Hello, World</h2>
+                                              <h2 class="slide-title FuturaPT-Demi"><a href="#">Hello, World</a></h2>
 
                                               <div class="slide-description">
                                                   <p>«Ощадбанк» — український банк, другий за розмірами активів та найбільший за кількістю відділень серед банків України.
@@ -43,7 +43,7 @@
                                    <div class="slide-container">
 
                                           <div class="slide-content" data-swiper-parallax="-500" data-swiper-parallax-duration="1400">
-                                              <h2 class="slide-title FuturaPT-Demi">Депозит Довіра</h2>
+                                              <h2 class="slide-title FuturaPT-Demi"><a href="#">Депозит Довіра</a></h2>
 
                                               <div class="slide-description">
                                                   <p>«Ощадбанк» — український банк, другий за розмірами активів та найбільший за кількістю відділень серед банків України.
@@ -78,7 +78,7 @@
                                    <div class="slide-container">
 
                                           <div class="slide-content" data-swiper-parallax="-500" data-swiper-parallax-duration="1400">
-                                              <h2 class="slide-title">Депозит Довіра</h2>
+                                              <h2 class="slide-title"><a href="#">Депозит Довіра</a></h2>
 
                                               <div class="slide-description">
                                                   <p>«Ощадбанк» — український банк, другий за розмірами активів та найбільший за кількістю відділень серед банків України.
